
2009-03-09 13:22 Ali aliov@xfce.org 
	 * : Bump xfce dependencies version to 4.6.0

2009-03-09 10:33 Ali aliov@xfce.org 
	 * : Fix a Gtk Warning in the settings dialog

2009-03-08 20:48 Ali aliov@xfce.org 
	 * : Import of changes for what will be in time version 0.8
2009-02-18 11:00 Ali

	*: Added a panel brightness plugin directory,
	   Changed the version to 0.9.0 (Next version)

/* We start doing real Changelog from 18-02-2009 */
2009-02-06
	*: 0.6.1 release

2009-01-26
	*: 0.6.0 release

2008-06-08 19:30
	
	* : release candidate 1