@@ -1,4 +1,7 @@
 
+2009-03-09 23:09 Ali aliov@xfce.org 
+	 * : Changes in the battery tooltips/notifications
+
 2009-03-09 13:22 Ali aliov@xfce.org 
 	 * : Bump xfce dependencies version to 4.6.0
 
